--- a/INFT2051_Project/Pages/ViewData.xaml
+++ b/INFT2051_Project/Pages/ViewData.xaml
@@ -5,8 +5,25 @@
              Title="ViewData">
     <VerticalStackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="Data Page"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
+
+        <StackLayout>
+            <CollectionView x:Name="MyCollView" ItemsSource="{Binding TopicData}">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <StackLayout
+                            Padding="10"
+                            Orientation="Horizontal"
+                            Spacing="10">
+                            <Label Text="{Binding TopicName}" VerticalOptions="Center"/>
+                            <Label Text="{Binding TotalQuestionsAttempted}" VerticalOptions="Center"/>
+                            <Label Text="{Binding TotalQuestionsCorrect}" VerticalOptions="Center"/>
+                        </StackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </StackLayout>
     </VerticalStackLayout>
 </ContentPage>
