--- a/INFT2051_Project/Pages/ViewDataPage.xaml
+++ b/INFT2051_Project/Pages/ViewDataPage.xaml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="INFT2051_Project.Pages.ViewData"
-             Title="ViewData">
+             
+             x:Class="INFT2051_Project.Pages.ViewDataPage"
+             Title="ViewDataPage">
     <VerticalStackLayout>
         <Label 
             Text="Data Page"
