--- a/INFT2051_Project/Pages/ViewDataPage.xaml
+++ b/INFT2051_Project/Pages/ViewDataPage.xaml
@@ -30,23 +30,24 @@
                 </ListView.ItemTemplate>
             </ListView>
 
-            <cal:Calendar
-                x:Name="dataCalender"
-                SelectedDateColor="black"
-                SelectedDayBackgroundColor="black"
-                Padding="5"
-                Events="{Binding UserActivity}"
-                EventIndicatorColor="Black">
-                <cal:Calendar.EventTemplate>
+            <Label Text="Active Days:"/>
+            <ListView x:Name="listViewActivity" Background="AliceBlue">
+                <ListView.ItemTemplate>
                     <DataTemplate>
-                        <VerticalStackLayout>
-                            <Label Text="Question Correct Today: "/>
-                            <Label Text="{Binding answeredQuestion}"/>
-                        </VerticalStackLayout>
-                </DataTemplate>
-                </cal:Calendar.EventTemplate>
-             </cal:Calendar>
-
+                        <ViewCell>
+                            <VerticalStackLayout 
+                                Padding="10">
+                                <Label Text="{Binding Date}" FontAttributes="Bold" FontSize="20" TextDecorations="Underline"/>
+                                <HorizontalStackLayout>
+                                    <Label Text="Question Attempted: "/>
+                                    <Label Text="{Binding answeredQuestion}"/>
+                                </HorizontalStackLayout>
+                                
+                            </VerticalStackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </VerticalStackLayout>
         
     </ScrollView>
