--- a/INFT2051_Project/Pages/QuadraticsPage.xaml
+++ b/INFT2051_Project/Pages/QuadraticsPage.xaml
@@ -113,15 +113,22 @@
                     Placeholder="Enter Answer One"
                     Text=""
                     HeightRequest="50"
-                    WidthRequest="150" />
+                    WidthRequest="150"
+                    PlaceholderColor="Grey"
+                    BackgroundColor="White"
+                    TextColor="Black"/>
 
                 <Entry
-                x:Name="AnswerInput2"
-                HorizontalTextAlignment="Center"
-                Keyboard="Default"
-                Placeholder="Enter Answer Two"
-                Text=""
-                WidthRequest="150" />
+                    x:Name="AnswerInput2"
+                    HorizontalTextAlignment="Center"
+                    Keyboard="Default"
+                    Placeholder="Enter Answer Two"
+                    Text=""
+                    HeightRequest="50"
+                    WidthRequest="150" 
+                    PlaceholderColor="Grey"
+                    BackgroundColor="White"
+                    TextColor="Black"/>
 
             </HorizontalStackLayout>
             <Button
