--- a/INFT2051_Project/Pages/TwoStep.xaml
+++ b/INFT2051_Project/Pages/TwoStep.xaml
@@ -5,10 +5,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Title="TwoStep"
     BackgroundColor="{StaticResource BackgroundLight}">
-
-    <VerticalStackLayout Padding="30,0" Spacing="5">
+    <ScrollView>
+        <VerticalStackLayout Padding="30,0" Spacing="5">
         
-        <StackLayout>
                 <Label Text="Two Step Equations" Style="{StaticResource TitleStyle}"/>
             <Frame Style="{StaticResource CardStyle}">
                 <Label
@@ -18,75 +17,102 @@
                     FontSize="20"
                     Text=""/>
             </Frame>
-        </StackLayout>
-        
-        <ScrollView>
-            <StackLayout x:Name="WorkingArea" IsVisible="False" Spacing="10">
-                <HorizontalStackLayout>
-                    <Label
-                        FontAttributes="Bold"
-                        Text="Step 1 : ">
-                    </Label>
-                    <Label
-                        Style="{StaticResource WorkingOutFont}"
-                        x:Name="Working1"
-                        Text="Line of Working">
-                    </Label>
-                </HorizontalStackLayout>
-                <HorizontalStackLayout>
-                    <Label
-                        FontAttributes="Bold"
-                        Text="Step 2 : ">
-                    </Label>
-                    <Label
-                        Style="{StaticResource WorkingOutFont}"
-                        x:Name="Working2"
-                        Text="Line of Working">
-                    </Label>
-                </HorizontalStackLayout>
-                <HorizontalStackLayout>
-                    <Label
-                        FontAttributes="Bold"
-                        Text="Step 3 : ">
-                    </Label>
-                    <Label
-                        Style="{StaticResource WorkingOutFont}"
-                        x:Name="Working3"
-                        Text="Line of Working">
-                    </Label>
-                </HorizontalStackLayout>
-                <HorizontalStackLayout>
-                    <Label
-                        FontAttributes="Bold"
-                        Text="Step 4 : ">
-                    </Label>
-                    <Label
-                        Style="{StaticResource WorkingOutFont}"
-                        x:Name="Working4"
-                        Text="Line of Working">
-                    </Label>
-                </HorizontalStackLayout>
-                <HorizontalStackLayout>
-                    <Label
-                        FontAttributes="Bold"
-                        Text="Step 5 : ">
-                    </Label>
-                    <Label
-                        Style="{StaticResource WorkingOutFont}"
-                        x:Name="Working5"
-                        Text="Line of Working">
-                    </Label>
-                </HorizontalStackLayout>
 
-            </StackLayout>
-        </ScrollView>
-        <Label
-            Style="{StaticResource QuestionTextStyle}"
-            x:Name="AnswerLabel"
-            FontFamily="CambriaMath"
-            FontSize="20"
-            HorizontalOptions="Center"
-            Text="" />
+            <Grid
+                x:Name="WorkingGrid"
+                ColumnSpacing="2"
+                IsVisible="False"
+                RowSpacing="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50" />
+                    <RowDefinition Height="50" />
+                    <RowDefinition Height="50" />
+                    <RowDefinition Height="50" />
+                    <RowDefinition Height="50" />
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Label
+                    TextColor="Black"
+                    FontAttributes="Bold"
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Text="Step 1:" />
+
+                <Label
+                    Style="{StaticResource WorkingOutFont}"
+                    x:Name="Working1"
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Text="Line of Working" />
+
+                <Label
+                    TextColor="Black"
+                    FontAttributes="Bold"
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Text="Step 2:" />
+
+                <Label
+                    Style="{StaticResource WorkingOutFont}"
+                    x:Name="Working2"
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Text="Line of working" />
+
+                <Label
+                    TextColor="Black"
+                    FontAttributes="Bold"
+                    Grid.Row="2"
+                    Grid.Column="0"
+                    Text="Step 3:" />
+
+                <Label
+                    Style="{StaticResource WorkingOutFont}"
+                    x:Name="Working3"
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Text="Line of Working" />
+
+                <Label
+                    TextColor="Black"
+                    FontAttributes="Bold"
+                    Grid.Row="3"
+                    Grid.Column="0"
+                    Text="Step 4:" />
+
+                <Label
+                    Style="{StaticResource WorkingOutFont}"
+                    x:Name="Working4"
+                    Grid.Row="3"
+                    Grid.Column="1"
+                    Text="Line of Working" />
+
+                <Label
+                    TextColor="Black"
+                    FontAttributes="Bold"
+                    Grid.Row="4"
+                    Grid.Column="0"
+                    Text="Step 5:" />
+
+                <Label
+                    Style="{StaticResource WorkingOutFont}"
+                    x:Name="Working5"
+                    Grid.Row="4"
+                    Grid.Column="1"
+                    Text="Line of Working" />
+            </Grid>
+            <Label
+                Style="{StaticResource QuestionTextStyle}"
+                x:Name="AnswerLabel"
+                FontFamily="CambriaMath"
+                FontSize="20"
+                HorizontalOptions="Center"
+                Text="" />
 
         <HorizontalStackLayout Padding="10,0" Spacing="25">
             <Entry
@@ -96,7 +122,11 @@
                 Keyboard="Default"
                 Placeholder="Enter the answer"
                 Text=""
-                WidthRequest="200" />
+                HeightRequest="50"
+                WidthRequest="200" 
+                PlaceholderColor="Grey"
+                BackgroundColor="White"
+                TextColor="Black"/>
 
             <Button
                 Style="{StaticResource AnswerButtonStyle}"
@@ -128,5 +158,5 @@
             SemanticProperties.Hint="Back"
             Text="Back" />
     </VerticalStackLayout>
-
+    </ScrollView>
 </ContentPage>
