--- a/INFT2051_Project/Pages/DecimalsPage.xaml
+++ b/INFT2051_Project/Pages/DecimalsPage.xaml
@@ -15,7 +15,9 @@
                     x:Name="QuestionLabel"
                     FontFamily="RomanMath"
                     FontSize="20"
-                    Text=""/>
+                    Text=""
+                    HorizontalTextAlignment="Center"
+                    WidthRequest="200"/>
             </Frame>
 
             <Grid
