--- a/INFT2051_Project/Pages/OneStep.xaml
+++ b/INFT2051_Project/Pages/OneStep.xaml
@@ -16,11 +16,13 @@
             <Frame Style="{StaticResource CardStyle}">
 
                 <Label
-                        Style="{StaticResource QuestionTextStyle}"
-                        x:Name="QuestionLabel"
-                        FontFamily="RomanMath"
-                        FontSize="20"
-                        Text=""/>
+                    Style="{StaticResource QuestionTextStyle}"
+                    x:Name="QuestionLabel"
+                    FontFamily="RomanMath"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    WidthRequest="200"
+                    Text=""/>
             </Frame>
         </StackLayout>
 
