--- a/INFT2051_Project/Pages/TwoStep.xaml
+++ b/INFT2051_Project/Pages/TwoStep.xaml
@@ -7,107 +7,103 @@
     BackgroundColor="{StaticResource BackgroundLight}">
     <ScrollView>
         <VerticalStackLayout Padding="30,0" Spacing="5">
-        
+
+            <StackLayout>
                 <Label Text="Two Step Equations" Style="{StaticResource TitleStyle}"/>
-            <Frame Style="{StaticResource CardStyle}">
-                <Label
-                    Style="{StaticResource QuestionTextStyle}"
-                    x:Name="QuestionLabel"
-                    FontFamily="RomanMath"
-                    FontSize="20"
-                    Text=""
-                    HorizontalTextAlignment="Center"
-                    WidthRequest="200"/>
-            </Frame>
+                <Frame Style="{StaticResource CardStyle}">
+                    <Label
+                        Style="{StaticResource QuestionTextStyle}"
+                        x:Name="QuestionLabel"
+                        FontFamily="RomanMath"
+                        FontSize="20"
+                        Text=""
+                        HorizontalTextAlignment="Center"
+                        WidthRequest="200"/>
+                </Frame>
+            </StackLayout>
 
-            <Grid
+
+
+            <VerticalStackLayout
                 x:Name="WorkingGrid"
-                ColumnSpacing="2"
-                IsVisible="False"
-                RowSpacing="2">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="50" />
-                    <RowDefinition Height="50" />
-                    <RowDefinition Height="50" />
-                    <RowDefinition Height="50" />
-                    <RowDefinition Height="50" />
-                </Grid.RowDefinitions>
+                IsVisible="False">
 
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="100" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-
-                <Label
+                <HorizontalStackLayout>
+                    <Label
                     TextColor="Black"
                     FontAttributes="Bold"
                     Grid.Row="0"
                     Grid.Column="0"
                     Text="Step 1:" />
 
-                <Label
-                    Style="{StaticResource WorkingOutFont}"
-                    x:Name="Working1"
-                    Grid.Row="0"
-                    Grid.Column="1"
-                    Text="Line of Working" />
-
-                <Label
+                    <Label
+                        Style="{StaticResource WorkingOutFont}"
+                        x:Name="Working1"
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        Text="Line of Working" />
+                </HorizontalStackLayout>
+                <HorizontalStackLayout>
+                    <Label
                     TextColor="Black"
                     FontAttributes="Bold"
                     Grid.Row="1"
                     Grid.Column="0"
                     Text="Step 2:" />
 
-                <Label
-                    Style="{StaticResource WorkingOutFont}"
-                    x:Name="Working2"
-                    Grid.Row="1"
-                    Grid.Column="1"
-                    Text="Line of working" />
-
-                <Label
+                    <Label
+                        Style="{StaticResource WorkingOutFont}"
+                        x:Name="Working2"
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        Text="Line of working" />
+                </HorizontalStackLayout>
+                <HorizontalStackLayout>
+                    <Label
                     TextColor="Black"
                     FontAttributes="Bold"
                     Grid.Row="2"
                     Grid.Column="0"
                     Text="Step 3:" />
 
-                <Label
-                    Style="{StaticResource WorkingOutFont}"
-                    x:Name="Working3"
-                    Grid.Row="2"
-                    Grid.Column="1"
-                    Text="Line of Working" />
-
-                <Label
+                    <Label
+                        Style="{StaticResource WorkingOutFont}"
+                        x:Name="Working3"
+                        Grid.Row="2"
+                        Grid.Column="1"
+                        Text="Line of Working" />
+                </HorizontalStackLayout>
+                <HorizontalStackLayout>
+                    <Label
                     TextColor="Black"
                     FontAttributes="Bold"
                     Grid.Row="3"
                     Grid.Column="0"
                     Text="Step 4:" />
 
-                <Label
-                    Style="{StaticResource WorkingOutFont}"
-                    x:Name="Working4"
-                    Grid.Row="3"
-                    Grid.Column="1"
-                    Text="Line of Working" />
-
-                <Label
+                    <Label
+                        Style="{StaticResource WorkingOutFont}"
+                        x:Name="Working4"
+                        Grid.Row="3"
+                        Grid.Column="1"
+                        Text="Line of Working" />
+                </HorizontalStackLayout>
+                <HorizontalStackLayout>
+                    <Label
                     TextColor="Black"
                     FontAttributes="Bold"
                     Grid.Row="4"
                     Grid.Column="0"
                     Text="Step 5:" />
 
-                <Label
-                    Style="{StaticResource WorkingOutFont}"
-                    x:Name="Working5"
-                    Grid.Row="4"
-                    Grid.Column="1"
-                    Text="Line of Working" />
-            </Grid>
+                    <Label
+                        Style="{StaticResource WorkingOutFont}"
+                        x:Name="Working5"
+                        Grid.Row="4"
+                        Grid.Column="1"
+                        Text="Line of Working" />
+                </HorizontalStackLayout>  
+            </VerticalStackLayout>
             <Label
                 Style="{StaticResource QuestionTextStyle}"
                 x:Name="AnswerLabel"
@@ -116,7 +112,7 @@
                 HorizontalOptions="Center"
                 Text="" />
 
-        <HorizontalStackLayout Padding="10,0" Spacing="25">
+        <HorizontalStackLayout Padding="5,0" Spacing="25">
             <Entry
                 x:Name="AnswerInput"
                 Grid.Column="0"
