--- a/INFT2051_Project/MainPage.xaml
+++ b/INFT2051_Project/MainPage.xaml
@@ -7,6 +7,7 @@
 
     <ScrollView>
         <VerticalStackLayout
+            x:Name="MainLayout"
             Padding="30,0"
             Spacing="10">
 
@@ -28,14 +29,15 @@
                 x:Name="OneStepButton"
                 Text="One Step Equations" 
                 SemanticProperties.Hint="Navigates to the one step equations page"
-                Clicked="OnButtonClicked"/>
+                Pressed="OnButtonPressed"
+                Released="OnButtonReleased"/>
 
             <Button
                 Style="{StaticResource NavigationButtonStyle}"
                 x:Name="TwoStepButton"
                 Text="Two Step Equations" 
                 SemanticProperties.Hint="Navigates to the two step equations page"
-                Clicked="OnButtonClicked"
+                Pressed="OnButtonPressed"
                 HorizontalOptions="Fill" />
 
             <Button
@@ -43,7 +45,7 @@
                 x:Name="QuadraticEquationsButton"
                 Text="Quadratic Equations" 
                 SemanticProperties.Hint="Navigates to the quadratic equations"
-                Clicked="OnButtonClicked"
+                Pressed="OnButtonPressed"
                 HorizontalOptions="Fill" />
 
             <Button
@@ -51,7 +53,7 @@
                 x:Name="Fractions"
                 Text="Fractions" 
                 SemanticProperties.Hint="Fraction"
-                Clicked="OnButtonClicked"
+                Pressed="OnButtonPressed"
                 HorizontalOptions="Fill" />
 
             <Button
@@ -59,7 +61,7 @@
                 x:Name="Decimals"
                 Text="Decimals" 
                 SemanticProperties.Hint="Decimals"
-                Clicked="OnButtonClicked"
+                Pressed="OnButtonPressed"
                 HorizontalOptions="Fill" />
 
             <Button
@@ -67,7 +69,7 @@
                 x:Name="Percentages"
                 Text="Percentages" 
                 SemanticProperties.Hint="Percentages"
-                Clicked="OnButtonClicked"
+                Pressed="OnButtonPressed"
                 HorizontalOptions="Fill" />
 
             <Button
@@ -75,7 +77,7 @@
                 x:Name="ActivityData"
                 Text="User Activity" 
                 SemanticProperties.Hint="ActivityData"
-                Clicked="OnButtonClicked"
+                Pressed="OnButtonPressed"
                 HorizontalOptions="Fill" />
 
             <Button
@@ -83,7 +85,7 @@
                 x:Name="UserData"
                 Text="User Data" 
                 SemanticProperties.Hint="UserData"
-                Clicked="OnButtonClicked"
+                Pressed="OnButtonPressed"
                 HorizontalOptions="Fill" />
             
             <Button
@@ -91,7 +93,7 @@
                 x:Name="HowToUse"
                 Text="How To Use" 
                 SemanticProperties.Hint="HowToUse"
-                Clicked="OnButtonClicked"
+                Pressed="OnButtonPressed"
                 HorizontalOptions="Fill" />
 
         </VerticalStackLayout>
