--- a/INFT2051_Project/Pages/PercentagesPage.xaml
+++ b/INFT2051_Project/Pages/PercentagesPage.xaml
@@ -19,20 +19,20 @@
 
                 <Frame Style="{StaticResource CardStyle}">
                     <Label
-                Style="{StaticResource QuestionTextStyle}"
-                x:Name="QuestionLabel"
-                FontFamily="RomanMath"
-                FontSize="18"
-                Text=""
-                HorizontalTextAlignment="Center"
-                WidthRequest="200"/>
+                        Style="{StaticResource QuestionTextStyle}"
+                        x:Name="QuestionLabel"
+                        FontFamily="RomanMath"
+                        FontSize="18"
+                        Text=""
+                        HorizontalTextAlignment="Center"
+                        WidthRequest="200"/>
                 </Frame>
 
                 <Grid
-                x:Name="WorkingGrid"
-                ColumnSpacing="2"
-                IsVisible="False"
-                RowSpacing="2">
+                    x:Name="WorkingGrid"
+                    ColumnSpacing="2"
+                    IsVisible="False"
+                    RowSpacing="2">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="50" />
                         <RowDefinition Height="50" />
@@ -82,58 +82,62 @@
 
                 </Grid>
                 <Label
-                Style="{StaticResource QuestionTextStyle}"
-                x:Name="AnswerLabel"
-                FontFamily="CambriaMath"
-                FontSize="20"
-                IsVisible="False"
-                HorizontalOptions="Center"
-                Text="Answer Label"
-                VerticalOptions="Center" />
+                    Style="{StaticResource QuestionTextStyle}"
+                    x:Name="AnswerLabel"
+                    FontFamily="CambriaMath"
+                    FontSize="20"
+                    IsVisible="False"
+                    HorizontalOptions="Center"
+                    Text="Answer Label"
+                    VerticalOptions="Center" />
 
                 <HorizontalStackLayout Padding="5,0" Spacing="25">
 
 
                     <Entry
-                x:Name="AnswerInput"
-                Grid.Column="0"
-                HorizontalTextAlignment="Center"
-                Keyboard="Default"
-                Placeholder="Enter the answer"
-                Text=""
-                HeightRequest="50"
-                WidthRequest="200"
-                PlaceholderColor="Grey"
-                BackgroundColor="White"
-                TextColor="Black"/>
+                        x:Name="AnswerInput"
+                        Grid.Column="0"
+                        HorizontalTextAlignment="Center"
+                        Keyboard="Default"
+                        Placeholder="Enter the answer"
+                        Text=""
+                        HeightRequest="50"
+                        WidthRequest="200"
+                        PlaceholderColor="Grey"
+                        BackgroundColor="White"
+                        TextColor="Black"/>
 
                     <Button
-                Style="{StaticResource AnswerButtonStyle}"
-                x:Name="SubmitAnswer"
-                Grid.Column="2"
-                Clicked="OnButtonClicked"
-                Text="Submit" />
+                        Style="{StaticResource AnswerButtonStyle}"
+                        x:Name="SubmitAnswer"
+                        Grid.Column="2"
+                        Pressed="OnButtonPressed"
+                        Released="OnButtonReleased"
+                        Text="Submit" />
 
                 </HorizontalStackLayout>
 
                 <Button
-            Style="{StaticResource NavigationButtonStyle}"
-            x:Name="NextQuestion"
-            Clicked="OnButtonClicked"
-            SemanticProperties.Hint="Next Question"
-            Text="Next Question" />
+                    Style="{StaticResource NavigationButtonStyle}"
+                    x:Name="NextQuestion"
+                    Pressed="OnButtonPressed"
+                    Released="OnButtonReleased"
+                    SemanticProperties.Hint="Next Question"
+                    Text="Next Question" />
 
                 <Button
-            Style="{StaticResource NavigationButtonStyle}"
-            x:Name="ShowWorking"
-            Clicked="OnButtonClicked"
-            SemanticProperties.Hint="Show Working"
-            Text="Show Working" />
+                    Style="{StaticResource NavigationButtonStyle}"
+                    x:Name="ShowWorking"
+                    Pressed="OnButtonPressed"
+                    Released="OnButtonReleased"
+                    SemanticProperties.Hint="Show Working"
+                    Text="Show Working" />
 
                 <Button
                     Style="{StaticResource NavigationButtonStyle}"
                     x:Name="Back"
-                    Clicked="OnButtonClicked"
+                    Pressed="OnButtonPressed"
+                    Released="OnButtonReleased"
                     SemanticProperties.Hint="Back"
                     Text="Back" />
             </VerticalStackLayout>
