--- a/INFT2051_Project/Pages/ViewActivityData.xaml
+++ b/INFT2051_Project/Pages/ViewActivityData.xaml
@@ -2,8 +2,15 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="INFT2051_Project.Pages.ViewActivityData"
+             xmlns:local="clr-namespace:INFT2051_Project"
              Title="ViewActivityData"
              BackgroundColor="{StaticResource BackgroundLight}">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <local:BoolToColorConverter x:Key="BoolToColorConverter"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
     <ScrollView>
         <Grid>
             <Grid.Background>
@@ -13,15 +20,20 @@
                 Source="papergrid.jpg"
                 Aspect="Fill"
                 Opacity="0.35"/>
-            <VerticalStackLayout Margin="5">
+            <VerticalStackLayout>
                 <Label Text="User Activity" Style="{StaticResource TitleStyle}"/>
                 <ListView x:Name="listViewActivity" RowHeight="75">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
                                 <VerticalStackLayout 
-                                Padding="10">
-                                    <Label Text="{Binding Date}" FontAttributes="Bold" FontSize="20" TextDecorations="Underline"/>
+                                    Padding="10">
+                                    <Label 
+                                        Text="{Binding Date, StringFormat='{0:dd/MM/yyyy}'}" 
+                                        FontAttributes="Bold" 
+                                        FontSize="20" 
+                                        TextDecorations="Underline" 
+                                        TextColor="{Binding answeredQuestion, Converter={StaticResource BoolToColorConverter}}"/>
                                     <HorizontalStackLayout>
                                         <Label Text="Question Attempted: "/>
                                         <Label Text="{Binding answeredQuestion}"/>
