--- a/INFT2051_Project/Pages/ViewActivityData.xaml
+++ b/INFT2051_Project/Pages/ViewActivityData.xaml
@@ -11,6 +11,8 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
+    
+
     <ScrollView>
         <Grid>
             <Grid.Background>
@@ -22,28 +24,32 @@
                 Opacity="0.35"/>
             <VerticalStackLayout>
                 <Label Text="User Activity" Style="{StaticResource TitleStyle}"/>
-                <ListView x:Name="listViewActivity" RowHeight="75">
-                    <ListView.ItemTemplate>
+                <CollectionView x:Name="collViewActivity" ItemsSource="{Binding UserActivity}" Margin="10">
+                    <CollectionView.ItemsLayout>
+                        <GridItemsLayout 
+                            Orientation="Vertical" 
+                            Span="7"
+                            HorizontalItemSpacing="2"
+                            VerticalItemSpacing="2"/>
+                    </CollectionView.ItemsLayout>
+                    <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <ViewCell>
-                                <VerticalStackLayout 
-                                    Padding="10">
-                                    <Label 
-                                        Text="{Binding Date, StringFormat='{0:dd/MM/yyyy}'}" 
-                                        FontAttributes="Bold" 
-                                        FontSize="20" 
-                                        TextDecorations="Underline" 
-                                        TextColor="{Binding answeredQuestion, Converter={StaticResource BoolToColorConverter}}"/>
-                                    <HorizontalStackLayout>
-                                        <Label Text="Question Attempted: "/>
-                                        <Label Text="{Binding answeredQuestion}"/>
-                                    </HorizontalStackLayout>
-
-                                </VerticalStackLayout>
-                            </ViewCell>
+                            <Frame
+                                Padding="2,5"
+                                WidthRequest="50"
+                                HeightRequest="50"
+                                BorderColor="{Binding answeredQuestion, Converter={StaticResource BoolToColorConverter}}"
+                                BackgroundColor="White">
+                                <Label 
+                                       Text="{Binding Date, StringFormat='{0:dd/MM}'}"
+                                       HorizontalOptions="Center"
+                                       VerticalOptions="Center"
+                                       FontAttributes="Bold"
+                                       TextColor="Black"/>
+                            </Frame>
                         </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
             </VerticalStackLayout>
         </Grid>
     </ScrollView>
